ow-enable-use-package only unload builtin org, reload only unloaded
reloading non-builtin org is sufficiently different from reloading
builtin org that there are a bunch of unhandled conditions, and
presumably the user does not want us doing such things anyway

--- a/orgware.org
+++ b/orgware.org
@@ -492,6 +492,7 @@ to any use of `use-package' otherwise it will be missing and fail"
            (not want-builtin-org)
            in-elisp-block
            (not ow--org-reloaded)
+           (assq 'org package--builtins) ; trying to reload a non-builtin org e.g. from elpa a nightmare
            (ow-unload-org)))
          success)
     (unwind-protect
@@ -524,7 +525,7 @@ to any use of `use-package' otherwise it will be missing and fail"
           (setq success t))
       (when (and to-reload (not success))
         (ow-reload-org)))
-    (when (and (not want-builtin-org) in-elisp-block)
+    (when to-reload
       (unless (assq 'org package-alist)
         ;; prevent the byte compiler from compiling
         ;; the org from elpa with the old `org-macs'
